Fixed the dvd bug where it goes off screen

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 	background-repeat: no-repeat;
 	text-align: center;
 
-	font-family: "Comic Sans MS"
+	font-family: "Comic Sans";
 }
 
 .text-div {
